# vm_automation

./: .gitignore  INSTALL.md  README.md  SKILL.md  init.py  plan.md  pyproject.toml  vm.py  vmconfig.example.json
.github/workflows/: ci.yml
nl_eval/: run01_prompt.md  run01_result.md
provision/: README.md
tests/: conftest.py  pytest.ini  test_build_run.py  test_cli_offline.py  test_exit_codes.py  test_host_verbs.py  test_run.py  test_snap_verify.py  test_transfer.py  test_waitfile.py
vm_cli/: __init__.py  cli.py  init.py
